--- a/action.yml
+++ b/action.yml
@@ -30,7 +30,7 @@ runs:
   using: "composite"
   steps:
     - name: add the files to estuary
-      run: 'curl --fail --silent --show-errors -X POST ${{ inputs.estuary_api_url }} -H "Authorization: Bearer ${{ inputs.estuary_api_key }}" -F "data=@${{ inputs.path_to_add }}" -H "Accept: application/json" -H "Content-Type: multipart/form-data" | tee ./response'
+      run: 'curl --fail --silent --show-error -X POST ${{ inputs.estuary_api_url }} -H "Authorization: Bearer ${{ inputs.estuary_api_key }}" -F "data=@${{ inputs.path_to_add }}" -H "Accept: application/json" -H "Content-Type: multipart/form-data" | tee ./response'
       shell: bash
     - name: fail if no CID in response
       run: jq -e '.cid' ./response
