--- a/action.yml
+++ b/action.yml
@@ -33,7 +33,7 @@ runs:
       run: npx ipfs-car --pack ${{ inputs.path_to_add }} --output redhot.car
       shell: bash
     - name: add the files to estuary
-      run: 'curl --fail --silent --show-error -X POST ${{ inputs.estuary_api_url }} -H "Authorization: Bearer ${{ inputs.estuary_api_key }}" -T "redhot.car" -H "Accept: application/json" -H "Content-Type: multipart/form-data" | tee ./response'
+      run: 'curl --fail --silent --show-error -X POST ${{ inputs.estuary_api_url }} -H "Authorization: Bearer ${{ inputs.estuary_api_key }}" -H "Accept: application/json" -T redhot.car | tee ./response'
       shell: bash
     - name: fail if no CID in response
       run: jq -e '.cid' ./response
