chore: fix test
License: MIT
Signed-off-by: Oli Evans <oli@protocol.ai>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,4 +19,4 @@ jobs:
       with:
         estuary_api_key: ${{ secrets.ESTUARY_API_KEY }}
         path_to_add: 'test/fixtures'
-    - run: echo ${{ steps.add_to_estuary.outputs.url }}
+    - run: echo ${{ steps.add_to_estuary_2.outputs.url }}
