--- a/action.yml
+++ b/action.yml
@@ -30,7 +30,7 @@ runs:
   using: "composite"
   steps:
     - name: pack the files into a Content-Addressed Archive (CAR)
-      run: npx ipfs-car --pack ${{ inputs.path_to_add }} --output lovely.car
+      run: npx ipfs-car --pack ${{ inputs.path_to_add }} --wrapWithDirectory false --output lovely.car
       shell: bash
     - name: add the files to estuary
       run: 'curl -X POST ${{ inputs.estuary_api_url }} -H "Authorization: Bearer ${{ inputs.estuary_api_key }}" -H "Accept: application/json" -T lovely.car --silent --show-error | tee ./response'
